# mailbaby-api-samples

./: LICENSE  README.md  vuln.txt
openapi-client/c/: CMakeLists.txt  README.md
openapi-client/c/.openapi-generator/: FILES
openapi-client/c/api/: BlockingAPI.c  BlockingAPI.h  DefaultAPI.c  DefaultAPI.h  HistoryAPI.c  HistoryAPI.h  SendingAPI.c  SendingAPI.h  ServicesAPI.c  ServicesAPI.h  StatusAPI.c  StatusAPI.h
openapi-client/c/docs/: BlockingAPI.md  DefaultAPI.md  HistoryAPI.md  SendingAPI.md  ServicesAPI.md  StatusAPI.md  body.md  body_1.md  deny_rule_new.md  deny_rule_record.md  deny_rule_record_all_of.md  email_address_name.md  email_address_names.md  email_address_param.md  email_address_types.md  email_addresses_types.md  error.md  error_message.md  generic_response.md  get_mail_orders_200_response_inner.md  get_mail_orders_401_response.md  get_stats_200_response_inner.md  inline_response_401.md  mail_attachment.md  mail_block_click_house.md  mail_block_rspamd.md  mail_blocks.md  mail_contact.md  mail_log.md  mail_log_entry.md  mail_order.md  mail_order_detail.md  mail_stats_type.md  mail_stats_type_volume.md  mail_stats_volume.md  raw_mail.md  send_mail.md  send_mail_adv.md  send_mail_adv_attachments_inner.md  send_mail_adv_bcc_inner.md  (+7 more)
openapi-client/c/include/: apiClient.h
openapi-client/c/model/: body.c  body.h  body_1.c  body_1.h  deny_rule_new.c  deny_rule_new.h  deny_rule_record.c  deny_rule_record.h  deny_rule_record_all_of.c  deny_rule_record_all_of.h  email_address.c  email_address.h  email_address_name.c  email_address_name.h  email_address_names.c  email_address_names.h  email_address_param.c  email_address_param.h  email_address_types.c  email_address_types.h  email_addresses_types.c  email_addresses_types.h  error.c  error.h  error_message.c  error_message.h  generic_response.c  generic_response.h  get_mail_orders_200_response_inner.c  get_mail_orders_200_response_inner.h  get_mail_orders_401_response.c  get_mail_orders_401_response.h  get_stats_200_response_inner.c  get_stats_200_response_inner.h  inline_response_401.c  mail_attachment.c  mail_attachment.h  mail_block_click_house.c  mail_block_click_house.h  mail_block_rspamd.c  (+43 more)
openapi-client/c/src/: apiClient.c
openapi-client/c/unit-test/: test_body.c  test_body_1.c  test_deny_rule_new.c  test_deny_rule_record.c  test_deny_rule_record_all_of.c  test_email_address_names.c  test_email_address_param.c  test_email_address_types.c  test_email_addresses_types.c  test_error.c  test_error_message.c  test_generic_response.c  test_get_mail_orders_200_response_inner.c  test_get_mail_orders_401_response.c  test_get_stats_200_response_inner.c  test_inline_response_401.c  test_mail_attachment.c  test_mail_block_click_house.c  test_mail_block_rspamd.c  test_mail_contact.c  test_mail_log.c  test_mail_log_entry.c  test_mail_order.c  test_mail_order_detail.c  test_mail_stats_type.c  test_mail_stats_type_volume.c  test_mail_stats_volume.c  test_raw_mail.c  test_send_mail.c  test_send_mail_adv.c  test_send_mail_adv_attachments_inner.c  test_send_mail_adv_bcc_inner.c  test_send_mail_adv_cc_inner.c  test_send_mail_adv_from.c  test_send_mail_adv_replyto_inner.c  test_send_mail_adv_to_inner.c  test_send_mail_from.c  test_send_mail_raw.c  test_send_mail_to.c
openapi-client/cpp-qt-client/client/: CMakeLists.txt  OAIBlockingApi.cpp  OAIBlockingApi.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIDenyRuleNew.cpp  OAIDenyRuleNew.h  OAIDenyRuleRecord.cpp  OAIDenyRuleRecord.h  OAIDenyRuleRecord_allOf.cpp  OAIDenyRuleRecord_allOf.h  OAIEmailAddress.cpp  OAIEmailAddress.h  OAIEmailAddressName.cpp  OAIEmailAddressName.h  OAIEmailAddressNames.cpp  OAIEmailAddressNames.h  OAIEmailAddressParam.cpp  OAIEmailAddressParam.h  OAIEmailAddressTypes.cpp  OAIEmailAddressTypes.h  OAIEmailAddressesTypes.cpp  OAIEmailAddressesTypes.h  OAIEnum.h  OAIErrorMessage.cpp  OAIErrorMessage.h  OAIGenericResponse.cpp  OAIGenericResponse.h  OAIGetMailOrders_200_response_inner.cpp  OAIGetMailOrders_200_response_inner.h  OAIGetMailOrders_401_response.cpp  OAIGetMailOrders_401_response.h  OAIGetStats_200_response_inner.cpp  OAIGetStats_200_response_inner.h  OAIHelpers.cpp  OAIHelpers.h  OAIHistoryApi.cpp  OAIHistoryApi.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  (+65 more)
openapi-client/rust/: Cargo.toml  README.md
openapi-client/rust/.openapi-generator/: FILES
openapi-client/rust/docs/: BlockingApi.md  Body.md  Body1.md  DefaultApi.md  DenyRuleNew.md  DenyRuleRecord.md  DenyRuleRecordAllOf.md  EmailAddress.md  EmailAddressName.md  EmailAddressNames.md  EmailAddressParam.md  EmailAddressTypes.md  EmailAddressesTypes.md  Error.md  ErrorMessage.md  ErrorResponse.md  GenericResponse.md  GetMailOrders200ResponseInner.md  GetMailOrders401Response.md  GetStats200ResponseInner.md  HistoryApi.md  MailAttachment.md  MailBlockClickHouse.md  MailBlockRspamd.md  MailBlocks.md  MailLog.md  MailLogEntry.md  MailOrder.md  MailOrderDetail.md  MailStatsType.md  MailStatsTypeVolume.md  MailStatsTypeVolumeFrom.md  MailStatsTypeVolumeIp.md  MailStatsTypeVolumeTo.md  MailStatsVolume.md  RawMail.md  SendMail.md  SendMailAdv.md  SendMailAdvAttachmentsInner.md  SendMailAdvBccInner.md  (+10 more)
openapi-client/rust/src/apis/: blocking_api.rs  configuration.rs  default_api.rs  history_api.rs  mod.rs  sending_api.rs  services_api.rs  status_api.rs
openapi-client/rust/src/models/: body.rs  body_1.rs  deny_rule_new.rs  deny_rule_record.rs  deny_rule_record_all_of.rs  email_address.rs  email_address_name.rs  email_address_names.rs  email_address_param.rs  email_address_types.rs  email_addresses_types.rs  error.rs  error_message.rs  error_response.rs  generic_response.rs  get_mail_orders_200_response_inner.rs  get_mail_orders_401_response.rs  get_stats_200_response_inner.rs  mail_attachment.rs  mail_block_click_house.rs  mail_block_rspamd.rs  mail_blocks.rs  mail_contact.rs  mail_log.rs  mail_log_entry.rs  mail_order.rs  mail_order_detail.rs  mail_stats_type.rs  mail_stats_type_volume.rs  mail_stats_type_volume_from.rs  mail_stats_type_volume_ip.rs  mail_stats_type_volume_to.rs  mail_stats_volume.rs  (+13 more)
(+9612 files in other folders)
